--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "deploy": "gh-pages -d client/dist"
+    "serve": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,10 +13,13 @@
   "description": "",
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "ejs": "^3.1.10",
+    "express": "^4.21.0",
     "gh-pages": "^6.1.1",
     "github-pages": "^3.0.2",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.1",
+    "nodemon": "^3.1.4",
     "postcss-loader": "^8.1.1",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
