--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "devDependencies": {
     "cookie-parser": "^1.4.6",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "gh-pages": "^6.1.1",
-    "github-pages": "^3.0.2",
+    "github-pages": "^0.1.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.1",
     "nodemon": "^3.1.4",
