--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "file-loader": "^6.2.0",
     "gh-pages": "^6.1.1",
     "github-pages": "^0.1.0",
     "html-webpack-plugin": "^5.6.0",
