--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "cookie-parser": "^1.4.6",
     "css-loader": "^7.1.2",
+    "cssnano": "^7.0.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
@@ -24,7 +26,9 @@
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.1",
     "nodemon": "^3.1.4",
+    "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
+    "rucksack-css": "^1.0.2",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
   }
